# CommUnity

./: .env.example  .gitignore  .vercelignore  CBP.md  DD.md  DP.md  PRD.md  README.md  SA.md  Schedule_function.md  TCD.md  TR.md  US.md  VERCEL_DEPLOY.md  accounts_data.json  admin_dashboard.md  board_function.md  build.py  certify.txt  check_admin.py  check_survey.py  check_urls.py  check_users.py  cookies.txt  create_admin.py  create_admin_account.py  create_superuser.py  create_test_users.py  database_opt.md  deploy-vercel.ps1  deploy.md  deploy_infra.md  filtering.md  get_nickname.py  notice_function.md  prompt.txt  pyproject.toml  render.yaml  render_set.md  requirements.txt  (+11 more)
config/: __init__.py  db_init.py  settings.py  urls.py  wsgi.py
docs/: START.md
logs/: 20260515_logs.md  20260515_logs_phase2.md  20260515_tasks.md  20260515_tasks_phase2.md  20260522_board_tasks.md  20260522_calendar_tasks.md  20260522_notice_tasks.md  20260529_RENDER_DEPLOYMENT_CHECKLIST.md  20260529_dashboard_logs.md  20260529_dashboard_tasks.md  20260529_db_optimization_logs.md  20260529_db_optimization_tasks.md  20260529_deploy_logs.md  20260529_deploy_tasks.md  20260529_deployment_ready.md  20260529_infra_tasks.md  20260529_logs.md  20260529_profile_stats_fix.md  20260529_render_deployment_guide.md  20260529_render_yaml.md  20260529_search_logs.md  20260529_search_tasks.md  20260529_survey_logs.md  20260529_survey_tasks.md  20260529_tasks.md  20260529_user_profile_logs.md  20260529_user_profile_tasks.md  CHECK_RENDER_LOGS.md  CREATE_POSTGRESQL_MANUALLY.md  DATABASE_URL_SETUP.md  (+3 more)
(+98 files in other folders)
